Closed
Bug 220060
Opened 22 years ago
Closed 22 years ago
Crash using nsJar w/ null mZipFile
Categories
(Core Graveyard :: Installer: XPInstall Engine, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
(Keywords: crash)
Attachments
(1 file)
|
432 bytes,
patch
|
darin.moz
:
review+
darin.moz
:
superreview+
|
Details | Diff | Splinter Review |
./run-mozilla.sh ./xpcshell
a='@mozilla.org/libjar/zip-reader;1';
var o = Components.classes[a].createInstance();
o instanceof Components.interfaces.nsIZipReader;
print(a,'\t',o);
for (c in o) try {
dump(c+' ');
print(o[c]);
} catch(e) {
print(e);
}
actual results: crash
expected results: no crash
reason for crash: uninitalized mZipFile
The properties the fail are: .file
Attachment #131987 -
Flags: superreview?(darin)
Attachment #131987 -
Flags: review?(darin)
Comment 2•22 years ago
|
||
Comment on attachment 131987 [details] [diff] [review]
only addref non null :)
r+sr=darin
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•10 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•