Bug 220060 Crash using nsJar w/ null mZipFile r=darin sr=darin